# sigdb

./: README.md  meson.build  meson_options.txt
.github/workflows/: ci.yml
.scripts/: verify-sigs-install.sh
elf/arm/32/: android-ndk.sig
elf/arm/64/: android-ndk.sig
elf/mips/32/: android-ndk.sig
elf/mips/64/: android-ndk.sig
elf/x86/32/: android-ndk.sig  fedora-zlib.sig
elf/x86/64/: android-ndk.sig  fedora-zlib.sig  ubuntu-libc++-10.sig  ubuntu-libc++-11.sig  ubuntu-libc++-12.sig  ubuntu-libc++-13.sig  ubuntu-libc++-14.sig  ubuntu-libc++-15.sig  ubuntu-libc++-7.sig  ubuntu-libc++-8.sig  ubuntu-libc++-9.sig  ubuntu-libc6.sig  ubuntu-libgcc-10.sig  ubuntu-libgcc-11.sig  ubuntu-libgcc-12.sig  ubuntu-libgcc-7.sig  ubuntu-libgcc-8.sig  ubuntu-libgcc-9.sig  ubuntu-libseccomp.sig  ubuntu-libsodium.sig  ubuntu-libstdc++-10.sig  ubuntu-libstdc++-11.sig  ubuntu-libstdc++-12.sig  ubuntu-libstdc++-5.sig  ubuntu-libstdc++-6.sig  ubuntu-libstdc++-7.sig  ubuntu-libstdc++-8.sig  ubuntu-libstdc++-9.sig  ubuntu-musl.sig  ubuntu-openssl.sig  ubuntu-zlib.sig
pe/arm/32/: VisualStudio2005.sig  VisualStudio2008.sig  VisualStudio2010.sig  VisualStudio2012.sig  VisualStudio2013.sig  VisualStudio2015.sig  VisualStudio2017.sig  VisualStudio2019.sig  VisualStudio2022.sig  winsdk.sig
pe/arm/64/: VisualStudio2017.sig  VisualStudio2019.sig  winsdk.sig
pe/mips/32/: VisualStudio2005.sig  VisualStudio2008.sig
pe/sh/32/: VisualStudio2005.sig  VisualStudio2008.sig
pe/x86/32/: VisualStudio2005.sig  VisualStudio2008.sig  VisualStudio2010.sig  VisualStudio2012.sig  VisualStudio2013.sig  (+7 more)
(+10 files in other folders)
